syntax = "proto3";

package roydb;

service Query {
    rpc Select (SelectRequest) returns (SelectResponse) {}
}

message SelectRequest {
    string sql = 1;
}

message SelectResponse {
    repeated RowData rowData = 1;
}

message RowData {
    repeated Field field = 1;
}

message Field {
    string key = 1;
    string valueType = 2;
    int64 intValue = 3;
    double doubleValue = 4;
    string strValue = 5;
    string charset = 6;
}

service Write {
    rpc Insert (InsertRequest) returns (InsertResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc Update (UpdateRequest) returns (UpdateResponse) {}
    rpc Create (CreateRequest) returns (CreateResponse) {}
}

message InsertRequest {
    string sql = 1;
}

message InsertResponse {
    int64 affectedRows = 1;
}

message DeleteRequest {
    string sql = 1;
}

message DeleteResponse {
    int64 affectedRows = 1;
}

message UpdateRequest {
    string sql = 1;
}

message UpdateResponse {
    int64 affectedRows = 1;
}

message CreateRequest {
    string sql = 1;
}

message CreateResponse {
    bool result = 1;
}

service Txn {
    rpc Begin (BeginRequest) returns (BeginResponse) {}
    rpc Commit (CommitRequest) returns (CommitResponse) {}
    rpc Rollback (RollbackRequest) returns (RollbackResponse) {}
}

message BeginRequest {

}

message BeginResponse {
    int64 ts = 1;
}

message CommitRequest {
    int64 ts = 1;
}

message CommitResponse {
    bool result = 1;
}

message RollbackRequest {
    int64 ts = 1;
}

message RollbackResponse {
    bool result = 1;
}

service Stat {
    rpc EstIndexCard (EstIndexCardRequest) returns (EstIndexCardResponse);
}

message EstIndexCardRequest {
    string schema = 1;
    string index = 2;
}

message EstIndexCardResponse {
    bool accepted = 1;
}
